cmake_minimum_required(VERSION 3.14)
project(Register)

set(CMAKE_CXX_STANDARD 14)
#add_library(register SHARED library.cpp library.h)
#add_library(firstLib SHARED demo_Register.h demo_Register.c)
#add_library(firstLib SHARED com_demo_jni_Register.h com_demo_jni_Register.c)
#add_library(firstDyLib SHARED DynamicRegister.c)
#add_executable(Register main.cpp d02_ref.cpp d02_ref.cpp)
#add_subdirectory(plus_c_demo/vip_day_1)

#add_subdirectory(plus_c_demo/vip_day_2)
add_subdirectory(plus_c_demo/vip_day_3)